fixed team member card size on mobile'

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1512,6 +1512,14 @@ section {
   overflow: hidden;
 }
 
+@media (max-width: 700px) {
+  #team .member {
+    width: 47% !important;
+    margin: 20px auto !important;
+  }
+}
+
+
 #team .member .member-info {
   opacity: 0;
   display: flex;
